[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helmgen"
version = "0.1.0"
description = "A simple, powerful CLI tool for generating and customizing Kubernetes Helm Charts with ease"
readme = "README.md"
authors = [{ name = "Jinsoo Jeong", email = "namejsjeongkr@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["helm", "kubernetes", "chart", "generator"]
dependencies = [
    "jinja2>=3.0.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/namejsjeongkr/helmgen"
"Bug Tracker" = "https://github.com/namejsjeongkr/helmgen/issues"

[project.scripts]
helmgen = "helmgen.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["helmgen"]

